# lvgl_editor

./: .gitignore  CMakeLists.txt  CustomButton2.lvml  README.md  example.h  example1.lvml  example2.lvml  generateManifests.js  index.html  my_button.lvml  package.json  project-manifest.json  resources-manifest.json  test.lvml  test2.lvml
.github/workflows/: publish-tests.yml
assets/: cssMode-BlszpIZN.js  freemarker2-B4GLXPCD.js  handlebars-CQDnCyFC.js  html-B3URoAfA.js  htmlMode-Cb_XvLQb.js  index-BWmR8NyN.js  index-woNDy-Zx.css  javascript-CqU2qxCQ.js  jsonMode-CiZjNT8Z.js  liquid-JZ4QYYNs.js  mdx-DcmcScjC.js  python-Df8aLms0.js  razor-C6pGyTT3.js  tsMode-Bn2XMKGg.js  typescript-Defbx5i_.js  xml-BdRSwl_0.js  yaml-CbTVy-aN.js
components/: scratchpad.xml
components/headings/: h2.xml
examples/: .gitignore  CustomButton.lvml  README.md  example.c  example.h  example_gen.c  example_gen.h  examples.c  examples_gen.c  examples_gen.h  file_list_gen.cmake  globals.xml  project.xml  translations.xml  ui.c  ui.h  ui_test.c  ui_test.h
examples/components/: base_screen.xml  base_screen_gen.c  base_screen_gen.h  button_default.xml  button_error.xml  button_warning.xml  checkbox.xml  checkbox_gen.c  checkbox_gen.h  h1.xml  (+23 more)
project/: README.md
project/examples/: .gitignore  CMakeLists.txt  examples.c  examples.h  examples_gen.c  examples_gen.h  globals.xml
project/examples/components/checkbox/: checkbox.xml
project/examples/components/column/: column.xml  column_gen.c  column_gen.h
project/examples/components/header/: header.xml  header_gen.h
project/examples/components/icon/: icon.xml
project/examples/components/row/: row_gen.c
project/examples/components/setclock/: setclock.xml
project/examples/components/step_button/: step_button.xml  step_button_gen.c
project/examples/components/subtitle/: subtitle.xml
project/examples/components/title/: title_gen.c
project/examples/images/: img_bell_data.c  img_wifi_data.c
project/examples/screens/about/: about_gen.c  about_gen.h
project/examples/screens/settings/: settings_gen.c
project/examples/widgets/: README.md
runtime/: CMakeLists.txt
runtime/lib/: CMakeLists.txt
(+87 files in other folders)
